--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,4 +15,5 @@ collections:
     create: true
     fields:
       - {name: title, label: Title}
+      - {name: layout, label: post}
       - {name: body, label: Body, widget: markdown}
