--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,7 +13,9 @@ collections:
     label: Post
     folder: posts
     create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {name: title, label: Title}
       - {name: layout, label: post}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
       - {name: body, label: Body, widget: markdown}
