--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,7 +15,7 @@ public_folder: "_site/img/uploads" # The src attribute for uploaded media will b
 collections:
   - name: post
     label: Post
-    folder: posts
+    folder: _posts
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
