--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,5 +21,5 @@ collections:
     fields:
       - {name: title, label: Title}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "tag", name: "tags", widget: "string"}
+      - {label: "categories", name: "categories"}
       - {name: body, label: Body, widget: markdown}
