--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,6 +20,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {name: title, label: Title}
+      - {name: author, label: author}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "categories", name: "categories"}
       - {name: body, label: Body, widget: markdown}
